# sosaltix2

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: font.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
kernel/src/allocator/: bump.rs
kernel/src/task/: mod.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  shell.rs  vga_buffer.rs
src/allocator/: fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
