[workspace]
resolver = "3"
members = ["kernel"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package]
name = "sosaltix2-boot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"

[build-dependencies]
bootloader = "0.11"
sosaltix2 = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }







